Refactor: 프로젝트 구조 변경 및 포메팅 변경 적용